--- a/echoguide.html
+++ b/echoguide.html
@@ -1,138 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Knowable – Heidi Lindenskov Róadóttir</title>
-
-<style>
-body {
-  margin: 0;
-  font-family: system-ui, -apple-system, Segoe UI, sans-serif;
-  background: #020617;
-  color: #e5e7eb;
-  line-height: 1.7;
-}
-
-main {
-  max-width: 900px;
-  margin: 0 auto;
-  padding: 30px 16px 60px;
-}
-
-a {
-  color: #7dd3fc;
-  text-decoration: none;
-}
-a:hover { text-decoration: underline; }
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.back {
-  font-size: .9rem;
-  opacity: .85;
-}
-
-h1 {
-  margin-bottom: 6px;
-}
-
-.meta {
-  color: #9ca3af;
-  font-size: .9rem;
-  margin-bottom: 20px;
-}
-
-.card {
-  background: #0f172a;
-  border: 1px solid rgba(148,163,184,.25);
-  border-radius: 12px;
-  padding: 16px;
-  margin-bottom: 16px;
-}
-
-.pill {
-  display: inline-block;
-  font-size: .8rem;
-  padding: 3px 8px;
-  border-radius: 999px;
-  border: 1px solid rgba(148,163,184,.4);
-  margin-right: 4px;
-}
-
-footer {
-  margin-top: 40px;
-  color: #9ca3af;
-  font-size: .8rem;
-  text-align: center;
-}
-</style>
+  <meta charset="UTF-8" />
+  <title>EchoGuide – Accessible Museum Companion · Heidi Lindenskov Róadóttir</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, "Segoe UI", sans-serif;
+      background: #020617;
+      color: #e5e7eb;
+      line-height: 1.7;
+    }
+    main {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 28px 16px 60px;
+    }
+    a { color: #7dd3fc; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+    .back { font-size: 0.9rem; color: #9ca3af; }
+    h1 { margin: 10px 0 4px; font-size: clamp(2rem, 3vw, 2.3rem); }
+    .meta { font-size: 0.9rem; color: #9ca3af; margin-bottom: 18px; }
+    .hero-sub { color: #cbd5f5; max-width: 42rem; margin-bottom: 20px; }
+    .pill {
+      display: inline-block; font-size: 0.8rem; padding: 3px 8px;
+      border-radius: 999px; border: 1px solid rgba(148,163,184,.4);
+      margin-right: 6px; margin-bottom: 6px; background: #020617;
+    }
+    .layout { display: grid; gap: 18px; margin-top: 16px; }
+    @media (min-width: 820px) {
+      .layout { grid-template-columns: 3fr 2fr; }
+    }
+    .card {
+      background: #020617;
+      border-radius: 14px;
+      border: 1px solid rgba(148,163,184,.25);
+      padding: 16px 16px 14px;
+      margin-bottom: 14px;
+    }
+    .card h2 { margin-top: 0; margin-bottom: 6px; font-size: 1.1rem; }
+    .side-card {
+      background: radial-gradient(circle at top left, #1e293b, #020617);
+      border-radius: 14px;
+      border: 1px solid rgba(148,163,184,.3);
+      padding: 14px 16px 12px;
+      font-size: 0.92rem;
+      color: #cbd5f5;
+    }
+    .side-card h3 { margin-top: 0; margin-bottom: 4px; font-size: 1rem; }
+    figure {
+      margin: 0 0 12px;
+      border-radius: 12px;
+      overflow: hidden;
+      border: 1px solid rgba(148,163,184,.25);
+      background: #020617;
+      font-size: 0.8rem;
+      color: #9ca3af;
+    }
+    figure img { width: 100%; display: block; }
+    figure figcaption { padding: 8px 10px; }
+    footer {
+      margin-top: 32px;
+      padding-top: 10px;
+      border-top: 1px solid rgba(148,163,184,.25);
+      font-size: 0.8rem;
+      color: #9ca3af;
+      text-align: center;
+    }
+  </style>
 </head>
-
 <body>
-<main>
+  <main>
+    <a href="index.html#projects" class="back">← Back to projects</a>
 
-  <div class="header">
-    <div>
-      <a class="back" href="index.html">← Back to Projects</a>
+    <h1>EchoGuide – Accessible Museum Companion</h1>
+    <div class="meta">
+      Master project · UX · Accessibility · Iterative prototyping
     </div>
-  </div>
 
-  <h1>Knowable – Trustpilot Review Analysis Platform</h1>
-
-  <div class="meta">
-    Bachelor Project · NLP · R · Data Analysis
-  </div>
-
-  <div class="card">
-    <h3>Overview</h3>
-    <p>
-      Knowable challenges the idea that star ratings alone reflect customer experience.
-      I built a data pipeline that scrapes Trustpilot reviews, applies NLP sentiment
-      and topic modelling, and presents deeper insights into what customers actually say.
+    <p class="hero-sub">
+      EchoGuide explores how museums can become more inclusive for visitors with visual
+      impairments and other access needs. The project started from a concrete case brief about
+      digital information screens at a Viking ship museum and grew into a broader concept for an
+      audio-based companion app.
     </p>
-  </div>
 
-  <div class="card">
-    <h3>My Role</h3>
-    <ul>
-      <li>Concept development</li>
-      <li>Data pipeline development in R</li>
-      <li>Web scraping & data cleaning</li>
-      <li>Sentiment and topic modelling</li>
-      <li>Prototype of insight presentation</li>
-    </ul>
-  </div>
+    <div>
+      <span class="pill">Design sprint</span>
+      <span class="pill">UX</span>
+      <span class="pill">Accessibility</span>
+      <span class="pill">Speculative design</span>
+      <span class="pill">Prototyping</span>
+      <span class="pill">p5.js</span>
+    </div>
 
-  <div class="card">
-    <h3>Tools & Methods</h3>
-    <span class="pill">R</span>
-    <span class="pill">NLP</span>
-    <span class="pill">Sentiment Analysis</span>
-    <span class="pill">Topic Modelling</span>
-    <span class="pill">Web Scraping</span>
-  </div>
+    <div class="layout">
+      <div>
+        <div class="card">
+          <h2>Context & challenge</h2>
+          <p>
+            The initial case asked for a digital info screen to show the day’s activities, film
+            screenings and events at the museum. Rather than simply digitising an analogue
+            magnet board, we asked:
+          </p>
+          <ul>
+            <li>What if we designed from the perspective of visitors who cannot rely on vision?</li>
+            <li>How would museum information change if 40% of visitors were blind?</li>
+          </ul>
+          <p>
+            This shift led us towards speculative and accessibility-focused explorations, moving
+            beyond screens to consider audio, tactility and independence.
+          </p>
+        </div>
 
-  <div class="card">
-    <h3>Outcome</h3>
-    <p>
-      The project demonstrated how text-based review analysis reveals deeper insights than ratings,
-      supporting smarter decisions for both companies and consumers.
-    </p>
-  </div>
+        <div class="card">
+          <h2>My role</h2>
+          <ul>
+            <li>Co-developed the overall concept and user scenarios.</li>
+            <li>Contributed to storyboards and early speculative prototypes.</li>
+            <li>Worked on interface and interaction decisions for the app-based solution.</li>
+            <li>Participated in testing and reflection on accessibility and usability.</li>
+          </ul>
+        </div>
 
-  <footer>
-    © <span id="year"></span> Heidi Lindenskov Róadóttir
-  </footer>
-</main>
+        <div class="card">
+          <h2>Process & iterations</h2>
+          <h3>Iteration 1 — Speculative “Smart Cane”</h3>
+          <p>
+            We initially explored a speculative physical artefact: a cane that could sense and read
+            information in the museum through tactile feedback and text-to-Braille translation.
+            This helped us understand technological and practical limitations, but also highlighted
+            the value of independence and non-intrusive support.
+          </p>
 
-<script>
-document.getElementById("year").textContent = new Date().getFullYear();
-</script>
+          <h3>Iteration 2 — App prototype with audio feedback</h3>
+          <p>
+            We then shifted towards a mobile app built in p5.js using image recognition and audio
+            output to read exhibit information aloud. This iteration focused on:
+          </p>
+          <ul>
+            <li>Camera-based scanning of markers or images near exhibits.</li>
+            <li>Audio narration of text associated with each object.</li>
+            <li>Basic layout and navigation for visually impaired users.</li>
+          </ul>
 
+          <h3>Iteration 3 — Usability & scalability</h3>
+          <p>
+            In the final iteration, we refined the concept with more attention to:
+          </p>
+          <ul>
+            <li>Scalability to other museums and contexts.</li>
+            <li>Usefulness beyond visual impairment (e.g. dyslexia, children, elderly visitors).</li>
+            <li>Opportunities for personalised narratives using AI in future work.</li>
+          </ul>
+        </div>
+
+        <div class="card">
+          <h2>Outcome & impact</h2>
+          <p>
+            EchoGuide became a concept for an accessible museum companion that:
+          </p>
+          <ul>
+            <li>Supports independent navigation by reading information aloud.</li>
+            <li>Can be adapted to different exhibitions and institutions.</li>
+            <li>Serves multiple user groups with different access needs.</li>
+          </ul>
+          <p>
+            While the technical prototype remains exploratory, the project offers concrete design
+            directions for museums wanting to move beyond purely visual communication.
+          </p>
+        </div>
+
+        <div class="card">
+          <h2>Reflections & learnings</h2>
+          <p>
+            EchoGuide strengthened my understanding of accessibility as an integral part of UX
+            rather than an add-on. The process also showed the value of speculative first iterations
+            to open up the design space before converging on more feasible solutions.
+          </p>
+        </div>
+      </div>
+
+      <aside>
+        <div class="side-card">
+          <h3>Project snapshot</h3>
+          <p><strong>Type:</strong> Master exam project</p>
+          <p><strong>Case:</strong> Digital information for a Viking ship museum</p>
+          <p><strong>Focus:</strong> Accessibility, universal design, audio interaction</p>
+        </div>
+
+        <figure>
+          <img src="images/echoguide-wireframes-placeholder.png" alt="EchoGuide wireframes placeholder">
+          <figcaption>
+            Placeholder for wireframes or storyboard of EchoGuide flows for scanning and listening.
+          </figcaption>
+        </figure>
+      </aside>
+    </div>
+
+    <footer>
+      © <span id="year"></span> Heidi Lindenskov Róadóttir
+    </footer>
+  </main>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
