--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
         <!-- FILTER PILLS -->
         <div class="hero-pills" id="filters">
           <button class="pill pill--accent active" data-filter="all">
-            <span class="pill-dot"></span> Digital transformation
+            <span class="pill-dot"></span> Everything
           </button>
 
           <button class="pill" data-filter="ux">
